--- a/assets/styles/wolfe.css
+++ b/assets/styles/wolfe.css
@@ -3,6 +3,8 @@
 .headerfqwhkqilkzf .navbar-light .navbar-nav .nav-link{
     color: rgb(0 0 0);
 }
-
+.headerfqwhkqilkzf .navbar-light .navbar-nav .nav-link:hover{
+    color: #06BBCD;
+}
 /* #harold(headerfqwhkqilkzf) #css ends  */
 /*****harold*****/
