--- a/assets/styles/wolfe.css
+++ b/assets/styles/wolfe.css
@@ -8,3 +8,22 @@
 }
 /* #harold(headerfqwhkqilkzf) #css ends  */
 /*****harold*****/
+
+/*****caavo*****/
+    /* #caavo(caavoduJuy9P4WAKtH2J) #css starts  */
+    .caavoduJuy9P4WAKtH2J h2{
+        color: #06BBCD
+    }
+
+    .caavoduJuy9P4WAKtH2J .btn-outline-primary {
+        color: #000000;
+        border-color: #000000;
+    }
+
+    .btn-outline-primary:hover {
+        color: #fff;
+        background-color: #06BBCD;
+        border-color: #06BBCD;
+    }
+    /* #caavo(caavoduJuy9P4WAKtH2J) #css ends  */
+/*****caavo*****/
