--- a/assets/styles/wolfe.css
+++ b/assets/styles/wolfe.css
@@ -46,3 +46,14 @@
     }
     /* #cjaime(calltoactioncahjtby06rt) #css ends  */
 /*****cjaime*****/
+
+/*****basu*****/
+/* #basu(d12294b36d7b134b) #css starts  */
+
+.bannerd12294b36d7b134b .button {
+    background-color: #06BBCD;
+    color: black
+}
+
+/* #basu(d12294b36d7b134b) #css ends  */
+/*****basu*****/
