--- a/assets/styles/wolfe.css
+++ b/assets/styles/wolfe.css
@@ -57,3 +57,12 @@
 
 /* #basu(d12294b36d7b134b) #css ends  */
 /*****basu*****/
+
+/*****tammy*****/ 
+/* #tammy(teamtmi4xt29bn1) #css starts */
+.teamtmi4xt29bn1  {
+    margin-top: 15px;
+    color: #06BBCD 
+   }
+/* #tammy(teamtmi4xt29bn1) #css ends */
+/*****tammy*****/
