--- a/assets/styles/wolfe.css
+++ b/assets/styles/wolfe.css
@@ -66,3 +66,17 @@
    }
 /* #tammy(teamtmi4xt29bn1) #css ends */
 /*****tammy*****/
+
+/*****tioni*****/
+    /* #tioni(testimonialtmrwms6esfu) #css starts  */
+    
+       .testimonialtmrwms6esfu strong {      
+          color: #06BBCD
+        }
+
+          .testimonialtmrwms6esfu  .fdb-block .fdb-touch {
+          border-top: solid 0.3125rem #06BBCD 
+        }
+         
+    /* #tioni(testimonialtmrwms6esfu) #css ends  */
+/*****tioni*****/
