--- a/assets/styles/wolfe.css
+++ b/assets/styles/wolfe.css
@@ -80,3 +80,11 @@
          
     /* #tioni(testimonialtmrwms6esfu) #css ends  */
 /*****tioni*****/
+
+/*****flores*****/
+    /* #flores(floresfts2q9glqh3) #css starts */
+    .floresfts2q9glqh3  {
+       
+     }
+    /* #flores(floresfts2q9glqh3) #css ends */
+/*****flores*****/
