--- a/assets/styles/wolfe.css
+++ b/assets/styles/wolfe.css
@@ -89,5 +89,8 @@
      .floresfts2q9glqh3 a{
         color: #06BBCD
      }
+     .floresfts2q9glqh3 a:hover{
+        color: #06BBCD
+     }
     /* #flores(floresfts2q9glqh3) #css ends */
 /*****flores*****/
