--- a/assets/styles/wolfe.css
+++ b/assets/styles/wolfe.css
@@ -11,6 +11,9 @@
 
 /*****caavo*****/
     /* #caavo(caavoduJuy9P4WAKtH2J) #css starts  */
+    .caavoduJuy9P4WAKtH2J .fdb-block {
+        padding: 5.5rem 0
+    }
     .caavoduJuy9P4WAKtH2J h2{
         color: #06BBCD
     }
