--- a/assets/styles/wolfe.css
+++ b/assets/styles/wolfe.css
@@ -1,7 +1,7 @@
 /*****harold*****/
 /* #harold(headerfqwhkqilkzf) #css starts  */
 .headerfqwhkqilkzf .navbar-light .navbar-nav .nav-link{
-    color: rgb(0 0 0)
+    color: #37423b
 }
 .headerfqwhkqilkzf .navbar-light .navbar-nav .nav-link:hover{
     color: #06BBCD
