--- a/assets/styles/wolfe.css
+++ b/assets/styles/wolfe.css
@@ -15,13 +15,20 @@
         padding: 5.5rem 0
     }
     .caavoduJuy9P4WAKtH2J h2{
-        color: #06BBCD
+        color: #37423b;
+        font-size: 2.5rem
+    }
+    .caavoduJuy9P4WAKtH2J .lead {
+        font-size: 1.25rem
     }
 
     .caavoduJuy9P4WAKtH2J .btn-outline-primary {
         color: #000000;
         font-weight: bold;
-        border-color: #000000
+        border-color: #000000;
+        border-radius: 30px;
+        padding-left: 30px;
+    padding-right: 30px;
     }
 
     .btn-outline-primary:hover {
