--- a/assets/styles/wolfe.css
+++ b/assets/styles/wolfe.css
@@ -75,6 +75,19 @@
     /* #cjaime(calltoactioncahjtby06rt) #css ends  */
 /*****cjaime*****/
 
+/*****pony*****/
+/* #pony(productsfd232222df02a491) #css starts  */
+.productsfd232222df02a491{
+    padding: 5.5rem 0
+}
+.productsfd232222df02a491 .title {
+    color: #37423b;
+    font-weight: 600
+}
+/* #pony(productsfd232222df02a491) #css ends  */
+/*****pony*****/
+
+
 /*****basu*****/
 /* #basu(d12294b36d7b134b) #css starts  */
 
