--- a/assets/styles/wolfe.css
+++ b/assets/styles/wolfe.css
@@ -72,6 +72,9 @@
         background-color: #06BBCD;
         border-color: #06BBCD
     }
+    .calltoactioncahjtby06rt .lead {
+        font-size: 1.25rem
+    }
     /* #cjaime(calltoactioncahjtby06rt) #css ends  */
 /*****cjaime*****/
 
